5. Make growth trend actually trend-based
